Enhance responsive design in detail.css; add media queries for better layout on smaller screens and ensure card box maintains minimum width.

--- a/styles/detail.css
+++ b/styles/detail.css
@@ -85,6 +85,7 @@
 .card-box {
     background-color: var(--primary-color) ;
     width: 15rem;
+    min-width: 15rem;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -546,4 +547,31 @@
     border: none;
     cursor: pointer;
     font-size: 1rem;
+}
+
+/* media */
+
+@media screen and (max-width:760px) {
+    
+    #product-box {
+        flex-direction: column;
+        align-items: center;
+        gap: 1.2rem;
+    }
+    .detail-right-box {
+        width: 100%;
+    }
+
+    .comment-and-reply, 
+    .comment-form-box {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:420px) {
+    
+    .detail-left-box {
+        min-width: none;
+        width: 100%;
+    }
 }
